--- a/Final Project/Final Project/main.html
+++ b/Final Project/Final Project/main.html
@@ -61,7 +61,7 @@
       </div>
       <div id="lunsj" class="timetablebody">
         <h5>Play a game with someone</h5>
-        <a href="./whoopie.gif" target="_blank"><button type="button">Done!</button></a>
+        <a href="whoopie.gif" target="_blank"><button type="button">Done!</button></a>
       </div>
       <div id="12" class="timetablebody">
         <h5>12.30-14.00</h5>
@@ -71,61 +71,65 @@
       </div>
       <div id="12" class="timetablebody">
         <h5>Language Comprehension Assignment</h5>
-        <a href="./sweet.gif" target="_blank"><button type="button">Done!</button></a>
+        <a href="sweet.gif" target="_blank"><button type="button">Done!</button></a>
       </div>
     </div>
 
-    <div class="secondboxes">
-          <div id="navigationbar">
-              <a  href="./Signin.html" onclick="alert('Good Job! Bye')"> Hi Henriette! <br> <img src="./train.jpg" alt="train" width="50" height="50"><br>Sign out</a>
-              <a  href="./homework.html"><img src="./Assignments.png" alt="Language Comprehension" width="50" height="50"><br>LANGUAGE<br></br> COMPREHENSION</a>
-              <a  href="timetable.html"><img src="./Timetable.png" alt="Week Plan" width="50" height="50"><br>WEEK PLAN</a>
-              <a  href="SafeSpace.html"><img src="./safe place.png" alt="Safe Space" width="50" height="50"><br> SAFE SPACE</a>
-              <a  href="mood.html"><img src="./Mood.png" alt="Mood" width="50" height="50"><br>MOOD</a>
-              <a  href="socialstory.html"><img src="./SocialStory.png" alt="Social stories" width="50" height="50"><br>SOCIAL STORY</a>
-          </div>
-    </div>
+    <!-- Navigation bar -->
+      <div class="secondboxes">
+            <div id="navigationbar">
+                <a  href="./Sign in.html" onclick="alert('Good Job! Bye')"> Hi Henriette! <br> <img src="Pictures/train.jpg" alt="train" width="50" height="50"><br>Sign out</a>
+                <a  href="main.html"><img id="home" src="Pictures/house.png" alt="Home Page" width="50" height="50"><br>HOME</a>
+                <a  href="timetable.html"><img src="Pictures/Timetable.png" alt="Week Plan" width="50" height="50"><br>WEEK PLAN</a>
+                <a  href="SafeSpace.html"><img src="Pictures/safe place.png" alt="Safe Space" width="50" height="50"><br> SAFE SPACE</a>
+                <a  href="mood.html"><img src="Pictures/Mood.png" alt="Mood" width="50" height="50"><br>MOOD</a>
+                <a  href="socialstory.html"><img src="Pictures/SocialStory.png" alt="Social story" width="50" height="50"><br>SOCIAL STORY</a>
+            </div>
+      </div>
+
+
 
     <div class="midcontent">
       <h2>Hope your day is going awesomely, Henriette!</h2>
-      <img src="./TogX.png" alt="Picture of a cartoon train">
+      <img src="Pictures/TogX.png" alt="Pictures of a cartoon train">
     </div>
 
-    <div class="chat">
+    <!-- Chat -->
+    <div class="chat" id="chat">
       <div class="chat-header">
         <h3>Teacher Chat</h3>
         <h4>Feelings</h4>
       </div>
       <div class="emoji">
-      <button type="button"><img class="button-image" src="./happy.png" id="emoji" alt="Emoji of feeling happy"></button>
-      <button type="button"><img class="button-image" src="./cool.png" id="emoji" alt="Emoji of feeling awesome"></button>
-      <button type="button"><img class="button-image" src="./confused.png" id="emoji" alt="Emoji of feeling confused"></button>
-      <button type="button"><img class="button-image" src="./sad.png" id="emoji" alt="Emoji of feeling sad"></button>
-      <button type="button"><img class="button-image" src="./scared.png" id="emoji" alt="Emoji of feeling scared"></button>
-      <button type="button"><img class="button-image" src="./meltdown.png" id="emoji" alt="Emoji of having a meltdown"></button>
+      <button type="button"><img class="button-image" src="Pictures/happy.png" id="emoji" alt="Emoji of feeling happy"></button>
+      <button type="button"><img class="button-image" src="Pictures/cool.png" id="emoji" alt="Emoji of feeling awesome"></button>
+      <button type="button"><img class="button-image" src="Pictures/confused.png" id="emoji" alt="Emoji of feeling confused"></button>
+      <button type="button"><img class="button-image" src="Pictures/sad.png" id="emoji" alt="Emoji of feeling sad"></button>
+      <button type="button"><img class="button-image" src="Pictures/scared.png" id="emoji" alt="Emoji of feeling scared"></button>
+      <button type="button"><img class="button-image" src="Pictures/meltdown.png" id="emoji" alt="Emoji of having a meltdown"></button>
       </div>
       <div class="container" id="light">
-        <img src="./myAvatar.png" alt="Avatar teacher">
+        <img src="Pictures/myAvatar.png" alt="Avatar teacher">
         <p>How are your studies going?</p>
         <span id="right" class="time">13.15</span>
       </div>
       <div class="container" id="dark">
-        <img src="./train.jpg" id="right" alt="Avatar (of train) - child">
+        <img src="Pictures/train.jpg" id="right" alt="Avatar (of train) - child">
         <p id="rightside-dialog">No</p>
         <span id="left" class="time">13.16</span>
       </div>
       <div class="container" id="light">
-        <img src="./myAvatar.png" alt="Avatar teacher">
+        <img src="Pictures/myAvatar.png" alt="Avatar teacher">
         <p>How are you feeling?</p>
         <span id="right" class="time">13.18</span>
       </div>
       <div class="container" id="dark">
-        <img src="./train.jpg" id="right" alt="Avatar (of train) - child">
-        <img src="meltdown.png" id="rightside-dialog" alt="Emoji of having a meltdown">
+        <img src="Pictures/train.jpg" id="right" alt="Avatar (of train) - child">
+        <img src="Pictures/meltdown.png" id="rightside-dialog" alt="Emoji of having a meltdown">
         <span id="left" class="time">13.20</span>
       </div>
       <div class="container" id="light">
-        <img src="./myAvatar.png" alt="Avatar teacher">
+        <img src="Pictures/myAvatar.png" alt="Avatar teacher">
         <p>I'm so sorry! You have done so well today! I think you should
         take a break or go to your safe space.</p>
         <span id="right" class="time">13.24</span>
