--- a/Final Project/Final Project/main.html
+++ b/Final Project/Final Project/main.html
@@ -49,9 +49,9 @@
       </div>
       <div id="ti" class="timetablebody">
         <h5>Chapter 10: Exercise 10.2, 10.4, 10.5</h5>
-        <a href="awesome.gif" target="_blank"><button type="button">Done!</button></a>
+        <a href="Pictures/awesome.gif" target="_blank"><button type="button">Done!</button></a>
         <h5>Chapter 11: Exercise 11.4, 11.5, 11.13</h5>
-        <a href="bravo.gif" target="_blank"><button type="button">Done!</button></a>
+        <a href="Pictures/bravo.gif" target="_blank"><button type="button">Done!</button></a>
       </div>
       <div id="lunsj" class="timetablebody">
         <h5>12.00-12.30</h5>
@@ -61,7 +61,7 @@
       </div>
       <div id="lunsj" class="timetablebody">
         <h5>Play a game with someone</h5>
-        <a href="whoopie.gif" target="_blank"><button type="button">Done!</button></a>
+        <a href="Pictures/whoopie.gif" target="_blank"><button type="button">Done!</button></a>
       </div>
       <div id="12" class="timetablebody">
         <h5>12.30-14.00</h5>
@@ -71,7 +71,7 @@
       </div>
       <div id="12" class="timetablebody">
         <h5>Language Comprehension Assignment</h5>
-        <a href="sweet.gif" target="_blank"><button type="button">Done!</button></a>
+        <a href="Pictures/sweet.gif" target="_blank"><button type="button">Done!</button></a>
       </div>
     </div>
 
