--- a/Final Project/Final Project/mood.html
+++ b/Final Project/Final Project/mood.html
@@ -80,7 +80,7 @@
   <!-- Navigation bar -->
     <div class="secondboxes">
           <div id="navigationbar">
-              <a  href="Pictures/Sign in.html" onclick="alert('Good Job! Bye')"> Hi Henriette! <br> <img src="Pictures/train.jpg" alt="train" width="50" height="50"><br>Sign out</a>
+              <a  href="Signin.html" onclick="alert('Good Job! Bye')"> Hi Henriette! <br> <img src="Pictures/train.jpg" alt="train" width="50" height="50"><br>Sign out</a>
               <a  href="main.html"><img id="home" src="Pictures/house.png" alt="Home Page" width="50" height="50"><br>HOME</a>
               <a  href="timetable.html"><img src="Pictures/Timetable.png" alt="Week Plan" width="50" height="50"><br>WEEK PLAN</a>
               <a  href="SafeSpace.html"><img src="Pictures/safe place.png" alt="Safe Space" width="50" height="50"><br> SAFE SPACE</a>
