--- a/Final Project/Final Project/main.html
+++ b/Final Project/Final Project/main.html
@@ -80,6 +80,7 @@
             <div id="navigationbar">
                 <a  href="./Signin.html" onclick="alert('Good Job! Bye')"> Hi Henriette! <br> <img src="Pictures/train.jpg" alt="train" width="50" height="50"><br>Sign out</a>
                 <a  href="main.html"><img id="home" src="Pictures/house.png" alt="Home Page" width="50" height="50"><br>HOME</a>
+                <a  href="homework.html"><img id="Assignment" src="Pictures/Assignments.png" alt="Language comprehension" width="50" height="50"><br>LANGUAGE <br> COMPREHENSION </a>
                 <a  href="timetable.html"><img src="Pictures/Timetable.png" alt="Week Plan" width="50" height="50"><br>WEEK PLAN</a>
                 <a  href="SafeSpace.html"><img src="Pictures/safe place.png" alt="Safe Space" width="50" height="50"><br> SAFE SPACE</a>
                 <a  href="mood.html"><img src="Pictures/Mood.png" alt="Mood" width="50" height="50"><br>MOOD</a>
