--- a/Final Project/Final Project/Htmlfinal.html
+++ b/Final Project/Final Project/Htmlfinal.html
@@ -28,8 +28,8 @@
        </div>
 
     <div class="resize-button">
-      <button class="resizeL" onclick="resizeLarge()">A</button>
-      <button class="resizeS" onclick="resizeSmall()">A</button>
+      <button class="resizeL" onclick="resizeLarge()"></button>
+      <button class="resizeS" onclick="resizeSmall()"></button>
     </div>
 
     <div class="header" id="topname">
@@ -47,7 +47,7 @@
           <div>
                 <h2></h2>
                 <p id="tekst">Countless countries, Norway among them, uphold the fundamental principle of the right to equal education for everyone. Some children do, however, have a harder time getting through elementary (and possibly higher education) than others. This is the case with many people diagnosed with autism spectrum disorder. A lot of children with ASD have limited options when it comes to their education and are either forced to go to schools for children with special needs or attend regular schools with classrooms of up to 30 people at once. Failure in adapting public schools for this specific challenge might result in increased costs for the state, as well as limiting the social training which might lessen the transition into adulthood for high-functional autistic children. </p>
-                <p id="tekst"><figure class="img1">
+                <p><figure class="img1">
                 <img src="" width="" height=""><figcaption> <a  href="#"></a> </figcaption></figure></p>
           </div>
    </div>
@@ -61,7 +61,7 @@
           <div>
               <h2></h2>
               <p id="tekst"></p>
-              <p id="tekst"><figure class="img1">
+              <p><figure class="img1">
               <img src="" width="" height=""><figcaption> <a  href="#"></a> </figcaption></figure></p>
                <a href="./"><button id=""></button></a>
           </div>
@@ -76,7 +76,7 @@
             <div>
                 <h2></h2>
                 <p id="tekst"></p>
-                <p id="tekst"><figure class="img1">
+                <p><figure class="img1">
                 <img src="" width="" height=""><figcaption> <a  href="#"></a> </figcaption></figure></p>
                 <a href="./"><button id=""></button></a>
           </div>
@@ -127,14 +127,6 @@
               </div>
           </div>
 
-  <script>
-  function resizeSmall() {
-    document.getElementById("tekst").style.fontSize="100%"
-  }
 
-  function resizeLarge() {
-    document.getElementById("tekst").style.fontSize="200%"
-  }
-  </script>
   </body>
 </html>
