--- a/Final Project/Final Project/Htmlfinal.html
+++ b/Final Project/Final Project/Htmlfinal.html
@@ -127,6 +127,14 @@
               </div>
           </div>
 
+          <script>
+          function resizeSmall() {
+            document.body.style.fontSize ="100%"
+          }
 
+          function resizeLarge() {
+            document.body.style.fontSize="200%"
+          }
+          </script>
   </body>
 </html>
